; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/wpa/src/rsn_supp/extr_wpa.c_wpa_supplicant_gtk_tx_bit_workaround.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/wpa/src/rsn_supp/extr_wpa.c_wpa_supplicant_gtk_tx_bit_workaround.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wpa_sm = type { i64, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@WPA_CIPHER_NONE = common dso_local global i64 0, align 8
@MSG_INFO = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [68 x i8] c"WPA: Tx bit set for GTK, but pairwise keys are used - ignore Tx bit\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.wpa_sm*, i32)* @wpa_supplicant_gtk_tx_bit_workaround to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @wpa_supplicant_gtk_tx_bit_workaround(%struct.wpa_sm* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.wpa_sm*, align 8
  %5 = alloca i32, align 4
  store %struct.wpa_sm* %0, %struct.wpa_sm** %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load i32, i32* %5, align 4
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %8, label %22

8:                                                ; preds = %2
  %9 = load %struct.wpa_sm*, %struct.wpa_sm** %4, align 8
  %10 = getelementptr inbounds %struct.wpa_sm, %struct.wpa_sm* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = load i64, i64* @WPA_CIPHER_NONE, align 8
  %13 = icmp ne i64 %11, %12
  br i1 %13, label %14, label %22

14:                                               ; preds = %8
  %15 = load %struct.wpa_sm*, %struct.wpa_sm** %4, align 8
  %16 = getelementptr inbounds %struct.wpa_sm, %struct.wpa_sm* %15, i32 0, i32 1
  %17 = load %struct.TYPE_2__*, %struct.TYPE_2__** %16, align 8
  %18 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = load i32, i32* @MSG_INFO, align 4
  %21 = call i32 @wpa_msg(i32 %19, i32 %20, i8* getelementptr inbounds ([68 x i8], [68 x i8]* @.str, i64 0, i64 0))
  store i32 0, i32* %3, align 4
  br label %24

22:                                               ; preds = %8, %2
  %23 = load i32, i32* %5, align 4
  store i32 %23, i32* %3, align 4
  br label %24

24:                                               ; preds = %22, %14
  %25 = load i32, i32* %3, align 4
  ret i32 %25
}

declare dso_local i32 @wpa_msg(i32, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
